Mise en place du resert password + gestion token

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,6 +26,10 @@ security:
                 enable_csrf: true
             logout:
                 path: logout
+            # Config du rate limiter
+            login_throttling:
+                max_attempts: 3
+                interval: '5 minutes'
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
