--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/framework-bundle": "6.2.*",
         "symfony/http-client": "6.2.*",
         "symfony/intl": "6.2.*",
+        "symfony/lock": "6.2.*",
         "symfony/mailer": "6.2.*",
         "symfony/mime": "6.2.*",
         "symfony/monolog-bundle": "^3.0",
@@ -42,7 +43,8 @@
         "symfony/validator": "6.2.*",
         "symfony/web-link": "6.2.*",
         "symfony/yaml": "6.2.*",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/cssinliner-extra": "^3.5",
+        "twig/extra-bundle": "^3.5",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
