--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "symfony/twig-bundle": "6.2.*",
         "symfony/validator": "6.2.*",
         "symfony/web-link": "6.2.*",
+        "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.2.*",
         "twig/cssinliner-extra": "^3.5",
         "twig/extra-bundle": "^3.5",
